import org.gradle.nativeplatform.platform.internal.DefaultNativePlatform

plugins {
	id 'org.springframework.boot' version '3.4.0'
	id 'io.spring.dependency-management' version '1.1.6'
	id "io.freefair.lombok" version "8.14.4"
	id 'java'
}

group = 'uk.gov.ons'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

repositories {
	mavenCentral()
}

ext {
	set('springCloudGcpVersion', "7.4.5")
	set('springCloudVersion', "2024.0.0")
}

dependencies {
	implementation ('org.springframework.boot:spring-boot-starter-data-elasticsearch')
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	
	implementation 'com.google.cloud:spring-cloud-gcp-dependencies:7.4.5'
	implementation 'com.google.cloud:spring-cloud-gcp-starter-pubsub'
	implementation 'com.google.cloud:spring-cloud-gcp-starter-storage'
	
	implementation 'org.springframework.integration:spring-integration-core'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'com.opencsv:opencsv:5.12.0'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.projectlombok:lombok:1.18.36'
	implementation 'io.micrometer:micrometer-registry-prometheus:1.14.1'
		
	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
	testImplementation 'io.projectreactor:reactor-test:3.7.1'
	testImplementation 'org.testcontainers:testcontainers-elasticsearch:2.0.5'
	testImplementation 'com.squareup.okhttp3:okhttp:5.3.2'
	testImplementation 'com.squareup.okhttp3:mockwebserver:5.3.2'
	testImplementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:4.3.2'
	testImplementation 'com.playtika.testcontainers:embedded-google-pubsub:3.1.20'
	// Resolves the java.lang.NoClassDefFoundError: org/junit/platform/engine/EngineDiscoveryListener in Eclipse	
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

dependencyManagement {
	imports {
		mavenBom "com.google.cloud:spring-cloud-gcp-dependencies:${springCloudGcpVersion}"
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

test {
	useJUnitPlatform()

	OperatingSystem os = DefaultNativePlatform.currentOperatingSystem;

	if (os.isLinux()) {
		def uid = ["id", "-u"].execute().text.trim()
		environment "DOCKER_HOST", "unix:///run/user/$uid/podman/podman.sock"
	} else if (os.isMacOsX()) {
		environment "DOCKER_HOST", "unix:///Users/${System.getenv('USER')}/.colima/default/docker.sock"
	}
	environment "TESTCONTAINERS_RYUK_DISABLED", "true"

	// listen to events in the test execution lifecycle
	beforeTest { descriptor ->
		logger.lifecycle("Running test: " + descriptor)
	}
}
